chore: migrate to new eternialib